<resources>

    <string name="app_name">ITIinHands</string>
    <string name="helloWorld">Hello bas</string>
    <string name="title_activity_event_list">EventList</string>
    <string name="login_userName">User Name</string>
    <string name="login_password">Password</string>
    <string name="loginView_LoginBtn">Login</string>
    <string name="loginView_GuestLoginBtn">Continue as a guest</string>
    <string name="networkFaildTxt">No Internet Connection</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tryAgainTxt">Try Again</string>
    <string name="StudentBtn">Student</string>
    <string name="graduateBtn">Graduate</string>
    <string name="staffBtn">Staff</string>
    <string name="companyBtn">Company</string>
    <string name="studentLogin">Login as a Student</string>
    <string name="graduateLogin">Login as a Graduate</string>
    <string name="staffLogin">Login as a Staff</string>
    <string name="companyLogin">Login as a Company</string>

    <string name="chat_edittext_hint">Your Message</string>
    <string name="editBtnStr">Edit</string>
    <string name="uploadBtnStr">Upload</string>
    <string name="gitProfileTxt">Git Hub</string>
    <string name="linkedinProfileTxt">LinkedIn</string>
    <string name="behanceProfileTxt">Behance</string>
    <string name="cancelStrBtn">CANCEL</string>
    <string name="submitStrBtn">SUBMIT</string>
    <string name="view_map">View Map</string>
    <string name="gitStr">GitHub Url</string>
    <string name="linkedInStr">LinkedIn Url</string>
    <string name="behanceStr">Behance Url</string>
    <string name="whoStr">Who are you ?</string>
    <string name="studentUL"><u>Student</u></string>
    <string name="graduateUL"><u>Graduate</u></string>
    <string name="staffUL"><u>Staff</u></string>
    <string name="companyUL"><u>Company</u></string>
</resources>
